[TASK] Add display of flash messages in Write mode

--- a/Resources/Private/Partials/Discussion/Components.html
+++ b/Resources/Private/Partials/Discussion/Components.html
@@ -432,6 +432,7 @@
 </f:section>
 
 <f:section name="Write">
+	<f:flashMessages class="alert alert-success" renderMode="div" />
 	<div class="write">
 		<h2>
 			<f:if condition="{parent}">
