--- a/Resources/Private/Partials/Discussion/Components.html
+++ b/Resources/Private/Partials/Discussion/Components.html
@@ -242,9 +242,11 @@
 			<f:render section="Write" arguments="{_all}" />
 		</f:then>
 		<f:else>
-			<f:link.action action="write" arguments="{discussion: discussion.uid}" class="btn btn-large btn-primary white">
-				<i class="icon-comment icon-white"></i> <f:translate key="thread.start" /></a>
-			</f:link.action>
+			<f:if condition="{settings.displayHeroUnit} < 1">
+				<f:link.action action="write" arguments="{discussion: discussion.uid}" class="btn btn-large btn-primary white">
+					<i class="icon-comment icon-white"></i> <f:translate key="thread.start" /></a>
+				</f:link.action>
+			</f:if>
 		</f:else>
 	</f:if>
 </f:section>
