--- a/Resources/Private/Partials/Discussion/Components.html
+++ b/Resources/Private/Partials/Discussion/Components.html
@@ -536,7 +536,7 @@
 				<v:iterator.loop count="{settings.attachments.files.count}" iteration="iteration">
 					<div class="fileupload fileupload-new" data-provides="fileupload">
 						<button class="btn btn-mini btn-file"><span class="fileupload-new"><f:translate key="chooseFile" /></span>
-							<span class="fileupload-exists"><f:translate key="changeFile" /></span><f:form.upload name="attachments[]" />
+							<span class="fileupload-exists"><f:translate key="changeFile" /></span><f:form.upload name="attachments[{iteration.cycle}]" />
 						</button>
 						<span class="fileupload-preview"></span>
 						<a href="#" class="close fileupload-exists" data-dismiss="fileupload" style="float: none">×</a>
@@ -558,7 +558,7 @@
 						<div class="fileupload-preview fileupload-exists thumbnail"></div>
 						<div>
 							<button class="btn btn-mini btn-file"><span class="fileupload-new"><f:translate key="chooseFile" /></span>
-								<span class="fileupload-exists"><f:translate key="changeFile" /></span><f:form.upload name="images[]" />
+								<span class="fileupload-exists"><f:translate key="changeFile" /></span><f:form.upload name="images[{iteration.cycle}]" />
 							</button>
 						</div>
 						<a href="#" class="close fileupload-exists" data-dismiss="fileupload" style="float: none">×</a>
